<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="56dp"
        app:cardCornerRadius="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/signInForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/signUpForm"
                android:layout_alignTop="@+id/signUpForm"
                android:background="?attr/backgroundColor"
                android:padding="@dimen/spacing_default">

                <TextView
                    android:id="@+id/signInFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:textColor="?attr/textColorPrimary"
                    android:layout_marginTop="@dimen/spacing_very_small"
                    android:text="SIGN IN"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signInInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signInFormTitle"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Email">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signInInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signInInputEmail"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signInPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/forgetPassword"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signInInputPassword"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:clickable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:padding="@dimen/spacing_small"
                    android:text="Forget Password?"
                    android:textColor="@color/text_primary"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/signInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:text="Login"
                    android:theme="@style/MyOverlayTheme" />

                <Button
                    android:id="@+id/skipButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:text="Guest" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signUpForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundDarkColor"
                android:padding="@dimen/spacing_default"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/signUpFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:layout_marginTop="@dimen/spacing_very_small"
                    android:textColor="?attr/textColorPrimary"
                    android:text="SIGN UP"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signUpInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signUpFormTitle"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Email">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signUpInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signUpInputEmail"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signUpInputRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signUpInputPassword"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Repeat Password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signUpRepeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/signUpButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/signUpInputRepeatPassword"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:text="Sign Up"
                    android:theme="@style/MyOverlayTheme" />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loginCard"
        android:layout_alignTop="@+id/loginCard"
        android:layout_marginRight="-28dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="16dp" />
</merge>