<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/chartIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="@dimen/spacing_default" />

        <ImageView
            android:id="@+id/drawerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="@dimen/spacing_default" />

        <EditText
            android:id="@+id/amountEditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_toLeftOf="@+id/chartIcon"
            android:layout_toRightOf="@+id/drawerIcon"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="0.0"
            android:lines="1"
            android:textColor="?attr/textColorPrimary"
            android:textColorHint="@color/text_disabled"
            android:textSize="@dimen/text_amount" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/categoriesGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/amountEditable"
            android:layout_marginBottom="58dp"
            android:layout_marginLeft="@dimen/spacing_default"
            android:layout_marginRight="@dimen/spacing_default"
            android:layout_marginTop="@dimen/spacing_small"
            android:scrollbars="none" />

        <Button
            android:id="@+id/addCategory"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="88dp"
            android:paddingLeft="@dimen/spacing_default"
            android:paddingRight="@dimen/spacing_default"
            android:text="Go to categories"
            android:theme="@style/MyOverlayTheme"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        app:behavior_peekHeight="?attr/actionBarSize"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <android.support.v7.widget.Toolbar
            android:visibility="gone"
            android:id="@+id/bottomSheetToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:elevation="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true">

            <View
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/top_shadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/shadow"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/spacing_small"
                    android:paddingLeft="@dimen/spacing_default"
                    android:paddingRight="@dimen/spacing_default"
                    android:paddingTop="@dimen/spacing_small"
                    android:text="@string/label_today"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="@dimen/text_big" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_toRightOf="@+id/dateLabel"
                    android:background="@drawable/rounded_corners"
                    android:paddingLeft="@dimen/spacing_default"
                    android:paddingRight="@dimen/spacing_default">

                    <EditText
                        android:id="@+id/expenseNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:hint="@string/label_note"
                        android:maxLines="1"
                        android:lines="1"
                        android:textColor="?attr/textColorPrimary" />
                </FrameLayout>

            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/timelineRecycler"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>